add updating image for all products